Fix default p CSS rule in course about page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -283,7 +283,7 @@ section.course-info section.details section {
     clear: both;
 }
 
-section.course-info section.details section p.justified {
+section.course-info section.details section p {
     text-align: left;
 }
 
