Increase private course button width

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -290,6 +290,7 @@ section.course-info header.course-profile .intro-inner-wrapper .media .hero img 
 }
 
 section.course-info header.course-profile .intro-inner-wrapper .intro .main-cta span.register.private {
+    width: 100%;
     cursor: default;
 }
 
