--- a/templates/courseware/course_about.html
+++ b/templates/courseware/course_about.html
@@ -172,9 +172,7 @@
             ${_("Course is full")}
           </span>
         %else:
-          <a href="#" class="register">
-            ${_("Register for {course.display_number_with_default}").format(course=course) | h}
-          </a>
+          <a href="#" class="register">S’inscrire à ce cours</a>
           <div id="register_error"></div>
         %endif
         </div>
