--- a/templates/courseware/course_about.html
+++ b/templates/courseware/course_about.html
@@ -12,7 +12,7 @@
       cart_link = ""
 %>
 <%namespace name='static' file='../static_content.html'/>
-<%! from microsite_configuration.middleware import MicrositeConfiguration %>
+<%! from microsite_configuration import microsite %>
 
 <%inherit file="../main.html" />
 
@@ -20,13 +20,15 @@
 
   <%
     if self.theme_enabled():
-      google_analytics_file = u'../' + MicrositeConfiguration.get_microsite_configuration_value('google_analytics_file', 'theme-google-analytics.html')
+      google_analytics_file = u'../{ga}'.format(
+        ga=microsite.get_value('google_analytics_file', 'theme-google-analytics.html')
+      )
     else:
       google_analytics_file = '../google_analytics.html'
   %>
 
   <%include file="${google_analytics_file}" />
-  
+
   ## OG (Open Graph) title and description added below to give social media info to display
   ## (https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content#tags)
   <meta property="og:title" content="${get_course_about_section(course, 'title')}" />
@@ -215,7 +217,7 @@
     <section class="course-sidebar">
       <section class="course-summary">
         <header>
-          % if MicrositeConfiguration.get_microsite_configuration_value('course_about_show_social_links', True):
+          % if microsite.get_value('course_about_show_social_links', True):
           <div class="social-sharing">
             <div class="sharing-message">${_("Share with friends and family!")}</div>
             ## TODO: this should probably be an overrideable block,
