--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -1,6 +1,8 @@
 ## mako
 <div class="wrapper wrapper-footer">
   <footer>
-    <p>© IONIS Online Courses</p>
+    <p>
+      <a href="https://courses.ionis-group.com">Contactez-nous</a>
+       | © IONIS Online Courses</p>
   </footer>
 </div>
