Fix href of contact-us link

--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -2,7 +2,7 @@
 <div class="wrapper wrapper-footer">
   <footer>
     <p>
-      <a href="https://courses.ionis-group.com">Contactez-nous</a>
+      <a href="https://courses.ionis-group.com/contact">Contactez-nous</a>
        | © IONIS Online Courses</p>
   </footer>
 </div>
