--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -3,6 +3,7 @@
   <footer>
     <p>
       <a href="https://courses.ionis-group.com/contact">Contactez-nous</a>
-       | © IONIS Online Courses</p>
+      | © IONISx
+    </p>
   </footer>
 </div>
