--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -6,7 +6,7 @@
 </%block>
 
 <%block name="navigation_logo">
-  <img src="${static.url('themes/ioc-edx-theme/images/logo.png')}" alt="IONIS Online Courses" width="145" height="70" />
+  <img src="${static.url('themes/ioc-edx-theme/images/logo.png')}" alt="IONISx" width="145" height="70" />
 </%block>
 
 ## When unauthenticated, only show the about page link
