Update platform name

--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,6 +1,6 @@
 {% load i18n %}{% load url from future %}{% autoescape off %}
 
-Une personne a récemment demandé à réinitialiser votre mot de passe IONIS Online Courses.
+Une personne a récemment demandé à réinitialiser votre mot de passe IONISx.
 
 Cliquez sur le lien suivant pour changer votre mot de passe.
 {% block reset_link %}
@@ -10,5 +10,5 @@ https://{{domain}}{% url 'student.views.password_reset_confirm_wrapper' uidb36=u
 Vous n’avez pas demandé ce changement ? Vous pouvez ignorer cet email, votre mot de passe est toujours le même.
 
 -- 
-L’équipe IONIS Online Courses
+L’équipe IONISx
 {% endautoescape %}
