--- a/templates/static_templates/theme-honor.html
+++ b/templates/static_templates/theme-honor.html
@@ -10,11 +10,11 @@
   <hr class="horizontal-divider">
 
   <div class="inner-wrapper">
-    <p>En vous inscrivant sur IONIS Online Courses, vous rejoignez une communauté mondiale d'apprenants. L'ambition de IONIS Online Courses est de fournir un accès aux meilleures formations de l’enseignement supérieur et ce quelle que soit votre localisation géographique.</p>
+    <p>En vous inscrivant sur IONISx, vous rejoignez une communauté mondiale d'apprenants. L'ambition de IONISx est de fournir un accès aux meilleures formations de l’enseignement supérieur et ce quelle que soit votre localisation géographique.</p>
 
-    <p>Tout utilisateur souhaitant accéder à IONIS Online Courses doit donc avoir préalablement consulté la présente Charte Utilisateurs ainsi que les Conditions Générales d’Utilisation et la Politique de Confidentialité qui décrivent les conditions dans lesquelles IONIS Online Courses donne accès à ses services. </p>
+    <p>Tout utilisateur souhaitant accéder à IONISx doit donc avoir préalablement consulté la présente Charte Utilisateurs ainsi que les Conditions Générales d’Utilisation et la Politique de Confidentialité qui décrivent les conditions dans lesquelles IONISx donne accès à ses services. </p>
 
-    <p>En s’inscrivant sur IONIS Online Courses, l’utilisateur est réputé avoir accepté, sans restriction ni réserve, les Conditions Générales d’Utilisation, la Charte Utilisateurs et la Politique de Confidentialité.</p>
+    <p>En s’inscrivant sur IONISx, l’utilisateur est réputé avoir accepté, sans restriction ni réserve, les Conditions Générales d’Utilisation, la Charte Utilisateurs et la Politique de Confidentialité.</p>
 
     <h2>Recommandations aux utilisateurs</h2>
 
