--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -44,7 +44,7 @@
         <img src="${static.url('themes/ioc-edx-theme/images/ionis-campus-paris-sud.jpg')}" alt="Campus IONIS Paris Sud" />
       </div>
       <article>
-        <h2>À propos de IONIS Online Courses</span></h2>
+        <h2>À propos de IONISx</span></h2>
 
         <p>IONIS Education Group développe de nouveaux supports de cours en ligne complétant ses enseignements en campus et permettant au grand public d'accéder à ses contenus originaux.</p>
         <p>Nous exécutons et développons une instance de la plateforme <a href="http://code.edx.org">OpenEdX</a>.</p>
@@ -58,7 +58,7 @@
       </div>
       <article>
         <h2>IONIS Brand Culture</h2>
-        <p>En attendant de profiter des enseignements à venir sur IONIS Online Courses, vous pouvez d'ores et déjà consulter <a href="http://www.ionisbrandculture.com/">IONIS Brand Culture</a>, une initiative originale dont l'objectif est d’apporter une bonne connaissance et compréhension des grandes réussites de référence dans les domaines du marketing et de la communication</strong><br />
+        <p>En attendant de profiter des enseignements à venir sur IONISx, vous pouvez d'ores et déjà consulter <a href="http://www.ionisbrandculture.com/">IONIS Brand Culture</a>, une initiative originale dont l'objectif est d’apporter une bonne connaissance et compréhension des grandes réussites de référence dans les domaines du marketing et de la communication</strong><br />
         </p>
       </article>
       <hr class="fade-right-hr-divider">
