--- a/templates/courseware/course_about.html
+++ b/templates/courseware/course_about.html
@@ -120,7 +120,7 @@
   <script src="${static.url('js/course_info.js')}"></script>
 </%block>
 
-<%block name="pagetitle">${_("About {course.display_number_with_default}").format(course=course) | h}</%block>
+<%block name="pagetitle">${get_course_about_section(course, 'title')}</%block>
 
 <section class="course-info">
   <header class="course-profile">
