--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,6 +17,12 @@ ul {
     margin: 0.5em 0 1em 0;
 }
 
+.container {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 
 /* ==========================================================================
    Content
